--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-screens": "3.31.1",
     "react-native-shake": "^5.6.2",
     "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "expo-sensors": "~13.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
